Updated Help Text to Additional Information and updated link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,9 @@
    &nbsp;&nbsp;&nbsp;&nbsp;
    <a href ='https://ostinc-my.sharepoint.com/personal/ekinde_ostglobal_com/Documents/Desktop/card3-20.txt' target ='_top'> Card3 Sample</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
    <a href ='https://ostinc.sharepoint.com/teams/CoEI/Shared%20Documents/Forms/AllItems.aspx?id=%2Fteams%2FCoEI%2FShared%20Documents%2FALIVE%2DFed%2DCivil%2FSpectrum%20DevSecOps%2F2021%20NTIA%20Manual%20New%20Edition%20V2%2Epdf&viewid=80487f49%2D816f%2D4d6e%2Dbcf8%2Dd7cb5475a3a3&parent=%2Fteams%2FCoEI%2FShared%20Documents%2FALIVE%2DFed%2DCivil%2FSpectrum%20DevSecOps' target="_top">NTIA Mannual</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   <a href = 'https://wwoogle.com' target= "_top" alt="This page is under Construction...."> Help</a>
+   <a href = 'https://ostinc.sharepoint.com/:p:/r/teams/CoEI/_layouts/15/Doc.aspx?sourcedoc=%7BFE568CDB-B366-48AD-B22F-61BDCF997CE9%7D&file=DesignOfCICDPipeline.pptx&action=edit&mobileredirect=true' target= "_top"> Additional Information</a>
    <!--<a href = [routerLink] = '/search'></a>-->
+
    <button class="BtnAFM" id="app-SEAS" style="background-color:orange" hidden="true"> Next</button>
 
 <div class = 'containd' >
